--- a/package.json
+++ b/package.json
@@ -22,5 +22,13 @@
     "React-native",
     "temp-converter"
   ],
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/eddy-t/react-native-temp-converter.git"
+  },
+  "bugs": {
+    "url": "https://github.com/eddy-t/react-native-temp-converter/issues"
+  },
+  "homepage": "https://github.com/eddy-t/react-native-temp-converter#readme"
 }
